inference-app/rest-api-i/deployment/ingress.rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: resource-intensive
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /monitoring/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
